--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
   <title>KAAS TOSTI</title>
 </head>
 <body>
+  <h1>index.html</h1>
   <h2>If you're seeing this, you're smart and beautiful</h2>
 </body>
 </html>
